force-app/main/default/objects/Project__c/fields/Estimated_Days__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Days__c</fullName>
    <label>Estimated Days</label>
    <summarizedField>ActionItem__c.Efforts_In_Days__c</summarizedField>
    <summaryForeignKey>ActionItem__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>